<resources>
    <string name="app_name">GitHubSearcher</string>

    <string name="no_found">No found</string>
    <string name="there_is_empty">There is empty</string>

    <string name="profile_item_menu">Profile</string>
    <string name="search_item_menu">Search</string>
    <string name="collection_item_menu">Collection</string>

    <string name="collection_clear_all">Clear All</string>


    <string name="sign_in">Sign in</string>
    <string name="password_hint">password</string>
    <string name="e_mail_hint">e-mail</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>